--- a/main.css
+++ b/main.css
@@ -1,24 +1,23 @@
 body {
-    margin: 0;
    
 }
 
 #container {
-   display: flex; 
-   flex: 1;
-   align-items: center;
-   justify-content: center;
-   
+    margin: 0;
 }
 
+
 #etch-container {
-    max-width: 650px;
-    max-height: 650px;
+    max-width: 500px;
+    max-height: 500px;
     display: flex;
-    flex: 1;
     border: black;
     border-style: solid;
     background-color: white;
+    margin-left: auto;
+    margin-right: auto;
+
+    
 }
 
 
@@ -33,6 +32,40 @@ body {
     display: flex;
     flex: 1;
 }
+
+#buttons {
+    display: flex;
+    flex: 1;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    padding-bottom: 10px;
+    gap: 20px;
+
+    
+
+}
+
+#incPix, #reset {
+    width: 80px;
+    height: 40px;
+}
+
+button {
+    border-style: solid;
+    border-width: 2px;
+    border-color: black;
+    border-radius: 5px;
+    background-color: white;
+}
+
+h1 {
+    display: flex;
+    flex: 1;
+    justify-content: center;
+}
+
+
 
 
 
